--- a/new-app/src/App.css
+++ b/new-app/src/App.css
@@ -1,4 +1,5 @@
 .wrapper {
+	
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;     
@@ -6,6 +7,8 @@
  
  
  .main{
+	margin-top: 30px;
+	gap: 2rem;
 	flex: 1;
 	display: flex;
 	flex-direction: column;
@@ -19,6 +22,7 @@
 	justify-content: center;
 	align-items: center;
 	gap: 3rem;
+	flex-wrap: wrap;
  }
  
  
