--- a/new-app/src/components/Counter.module.css
+++ b/new-app/src/components/Counter.module.css
@@ -1,17 +1,19 @@
-.footer {
-	min-height: 50px;
-	padding: 1.5rem;
+.container{
+	margin-top: 30px;
 	display: flex;
-	flex-direction: row;
 	justify-content: center;
-	align-items: center;
-	border-top: 3px solid black;
- }
+	flex-direction: row;
+	gap: 20px;
+	background-color: grey;
+	padding: 20px;
+	border-radius: 8px;
+	
+}
 
- .btn{
+.btn{
 	display: flex;
 	width: 30px;
 	justify-content: center;
 	border-radius: 8px;
 	box-shadow: 2px 3px rgba(60, 58, 58, 0.214)
- }
+}
