--- a/new-app/src/App.css
+++ b/new-app/src/App.css
@@ -7,22 +7,20 @@
  
  
  .main{
-	margin-top: 30px;
 	gap: 2rem;
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	padding: 1rem;
 	align-items: center;
-	justify-content: center;
  }
 
  .cards-container{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	gap: 3rem;
-	flex-wrap: wrap;
+	width: 100%;
+	display: grid;
+  	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+ 	gap: 2rem;
+	padding: 1rem;
  }
  
  
