--- a/new-app/src/components/Header.module.css
+++ b/new-app/src/components/Header.module.css
@@ -3,7 +3,7 @@
 	padding: 1.5rem;
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
  }
 
@@ -11,4 +11,15 @@
 	text-align: left;
 	font-weight: 800;
 	font-size: 1.5rem;
+ }
+
+ .nav{
+	display: flex;
+	gap: 2rem;
+	justify-content: space-between;
+	font-weight: 600;
+ }
+
+ .nav a:hover {
+	text-decoration: underline;
  }
